--- a/src/app/components/Sidebar/Sidebar.css
+++ b/src/app/components/Sidebar/Sidebar.css
@@ -27,14 +27,15 @@
   }
 }
 
-/* TODO */
 .logo {
-  height: 24px;
+  height: 34px;
+  margin-top: -6px;
 
   @media (--bp-medium) {
     max-width: 100%;
     height: auto;
     max-height: 100%;
+    margin: 0;
   }
 }
 
