--- a/src/allocations/Allocations.css
+++ b/src/allocations/Allocations.css
@@ -1,7 +1,23 @@
+.title {
+  color: var(--tw-primary-content);
+}
+
 .actions {
   display: inline-grid;
   grid-auto-flow: column;
   align-items: center;
   flex-shrink: 0;
   grid-gap: var(--pd-8) var(--pd-12);
+}
+
+.content {
+  padding-top: 0;
+}
+
+.sub-title {
+  margin: var(--pd-32) 0 0;
+  font-family: var(--font-header);
+  font-size: var(--text-20);
+  font-weight: var(--font-400);
+  line-height: var(--line-28);
 }
