--- a/src/app/containers/Overview/Overview.css
+++ b/src/app/containers/Overview/Overview.css
@@ -38,5 +38,6 @@
   margin: var(--pd-32) 0;
   font-family: var(--font-header);
   font-size: var(--text-20);
+  font-weight: var(--font-400);
   line-height: var(--line-28);
 }
