--- a/src/cards/components/CardPreview/CardPreview.css
+++ b/src/cards/components/CardPreview/CardPreview.css
@@ -25,7 +25,7 @@
   line-height: var(--line-24);
 }
 
-.allocation {
+.item {
   margin-top: var(--pd-8);
   font-size: var(--text-12);
   line-height: var(--line-16);
