--- a/src/app/components/Page/Page.css
+++ b/src/app/components/Page/Page.css
@@ -9,12 +9,15 @@
 }
 
 .side {
-  position: sticky;
-  top: 0;
   display: flex;
-  height: 100vh;
   flex-direction: column;
   border-right: 1px solid var(--tw-gray-30);
+
+  @media (--bp-large) {
+    position: sticky;
+    top: 0;
+    height: 100vh;
+  }
 }
 
 .wrapper {
