Updated get allocations service and related code

--- a/src/app/containers/Messages/Messages.css
+++ b/src/app/containers/Messages/Messages.css
@@ -9,6 +9,10 @@
 }
 
 .message {
-  margin: var(--pd-12);
+  margin: var(--pd-12) var(--pd-24);
   transform: translate3d(0, 0, 0);
+
+  &:first-child {
+    margin-top: var(--pd-24);
+  }
 }
