--- a/src/_common/components/Select/Option.css
+++ b/src/_common/components/Select/Option.css
@@ -2,10 +2,11 @@
   display: flex;
   padding: var(--pd-8) var(--pd-12);
   align-items: center;
+  white-space: nowrap;
   cursor: default;
 
   &:hover {
-    background: var(--tw-gray-10);
+    background: var(--tw-primary-light);
   }
 }
 
@@ -20,6 +21,8 @@
 
 .content {
   flex-grow: 1;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .icon {
