--- a/src/cards/components/CardsTable/CardsTable.css
+++ b/src/cards/components/CardsTable/CardsTable.css
@@ -2,8 +2,20 @@
   width: 320px;
 }
 
+.card {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: var(--pd-10);
+}
+
 .number,
 .name {
   color: var(--tw-primary-content);
   cursor: pointer;
+}
+
+.type {
+  display: block;
+  margin-top: var(--pd-2);
+  color: var(--tw-gray-60);
 }
