--- a/src/employees/containers/EmployeePreview/EmployeePreview.css
+++ b/src/employees/containers/EmployeePreview/EmployeePreview.css
@@ -1,3 +1,18 @@
+.root {
+  display: grid;
+  height: 100%;
+  grid-template-rows: 1fr auto;
+  grid-gap: var(--pd-16);
+}
+
+.name {
+  margin: var(--pd-12) 0;
+  font-family: var(--font-header);
+  font-size: var(--text-20);
+  font-weight: var(--font-400);
+  line-height: var(--line-28);
+}
+
 .data {
   margin: var(--pd-12) 0;
   font-weight: var(--font-400);
@@ -20,8 +35,4 @@
 .cards-list {
   display: grid;
   grid-gap: var(--pd-8);
-}
-
-.edit {
-  margin-top: var(--pd-16);
 }
