[CAP-102] Updated transactions lists

--- a/src/transactions/components/TransactionsTable/TransactionsTable.css
+++ b/src/transactions/components/TransactionsTable/TransactionsTable.css
@@ -50,6 +50,10 @@
   margin-top: -4px;
 }
 
+.receipt-empty {
+  color: var(--tw-gray-40);
+}
+
 .sub {
   margin-top: var(--pd-2);
   color: var(--tw-gray-60);
