--- a/src/_common/components/Switch/Switch.css
+++ b/src/_common/components/Switch/Switch.css
@@ -5,7 +5,13 @@
 }
 
 .input {
-  display: none;
+  position: absolute;
+  pointer-events: none;
+  opacity: 0;
+
+  &:focus + span {
+    outline: 2px solid var(--tw-gray-30);
+  }
 }
 
 .control {
