[CAP-223] Updated Checkbox component for accessibility

--- a/src/_common/components/Checkbox/Checkbox.css
+++ b/src/_common/components/Checkbox/Checkbox.css
@@ -6,7 +6,13 @@
 }
 
 .input {
-  display: none;
+  position: absolute;
+  pointer-events: none;
+  opacity: 0;
+
+  &:focus + span {
+    outline: 2px solid var(--tw-gray-30);
+  }
 }
 
 .control {
