--- a/src/employees/components/EditEmployeeForm/EditEmployeeForm.css
+++ b/src/employees/components/EditEmployeeForm/EditEmployeeForm.css
@@ -1,21 +1,6 @@
-.group {
-  display: flex;
-  flex-direction: column;
-  gap: 0 var(--pd-24);
+.item {
+  width: 100%;
 
-  @media (--bp-medium) {
-    flex-direction: row;
-    flex-wrap: wrap;
-  }
-}
-
-.name {
-  @media (--bp-medium) {
-    min-width: 258px;
-  }
-}
-
-.email {
   @media (--bp-medium) {
     max-width: 400px;
   }
