[CAP-243] Add keyboard/tab interaction to Select element

--- a/src/_common/components/Select/Option.css
+++ b/src/_common/components/Select/Option.css
@@ -5,8 +5,9 @@
   white-space: nowrap;
   cursor: pointer;
 
-  &:hover {
+  &:hover, &:focus {
     background: var(--tw-primary-light);
+    outline: none;
   }
 }
 
