--- a/src/_common/components/Input/Input.css
+++ b/src/_common/components/Input/Input.css
@@ -52,7 +52,8 @@
 
 .prefix {
   display: flex;
-  padding-left: var(--pd-8);
+  margin-right: -2px;
+  padding-left: var(--pd-12);
   align-items: center;
   flex-shrink: 0;
 
