--- a/src/employees/components/EditEmployeeFlatForm/EditEmployeeFlatForm.css
+++ b/src/employees/components/EditEmployeeFlatForm/EditEmployeeFlatForm.css
@@ -4,3 +4,9 @@
   grid-template-rows: 1fr auto;
   grid-gap: var(--pd-16);
 }
+
+.wrapper {
+  overflow-x: hidden;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+}
