--- a/src/_common/components/MultiSelect/MultiSelect.css
+++ b/src/_common/components/MultiSelect/MultiSelect.css
@@ -59,3 +59,75 @@
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
 }
+
+.input-wrapper {
+  display: flex;
+  padding: 2px;
+  flex-wrap: wrap;
+  border: 1px solid #c2c2bf;
+  border-radius: 8px;
+
+  /* &:focus {
+    outline: 2px solid #44f075;
+    border-color: #44f075;
+  } */
+}
+
+.selected-option {
+  position: relative;
+  display: flex;
+  box-sizing: border-box;
+  max-width: 100%;
+  height: 24px;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  flex: none;
+  line-height: 22px;
+  background: #f5f5f5;
+  border: 1px solid #f0f0f0;
+  border-radius: 4px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: default;
+  -webkit-margin-end: 4px;
+  margin-inline-end: 4px;
+  -webkit-padding-start: 8px;
+  padding-inline-start: 8px;
+  -webkit-padding-end: 4px;
+  padding-inline-end: 4px;
+}
+
+.selected-option-text {
+  display: inline-block;
+  margin-right: 4px;
+  white-space: pre;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.selected-option-x {
+  display: inline-block;
+  color: #00000073;
+  font-size: 12px;
+  line-height: inherit;
+  text-align: center;
+  cursor: pointer;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.search-option-input {
+  width: auto;
+  min-width: 100px;
+  margin-top: 3px;
+  margin-bottom: 2px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-left: 4px;
+  flex: 1;
+  border: 0;
+  outline: transparent;
+}
