--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,9 @@
   --tw-gray-60: #616160;
   --tw-gray-40: #92918f;
   --tw-gray-30: #c2c2bf;
+  --tw-gray-25: #f0f0f0;
   --tw-gray-20: #f3f2ef;
+  --tw-gray-15: #f5f5f5;
   --tw-gray-10: #fbfbfa;
   --tw-white: #fff;
   --tw-accent-80: #49bb69;
