--- a/src/app/components/SpendingByWidget/SpendingByWidget.css
+++ b/src/app/components/SpendingByWidget/SpendingByWidget.css
@@ -1,10 +1,20 @@
 .content {
   display: grid;
-  grid-gap: var(--pd-16);
+  grid-gap: var(--pd-40);
 
   @media (--bp-medium) {
     grid-template-columns: 1fr auto;
   }
+}
+
+.empty {
+  display: flex;
+  width: 100%;
+  height: 100px;
+  align-items: center;
+  justify-content: center;
+  color: var(--tw-gray-60);
+  text-align: center;
 }
 
 .list {
@@ -12,34 +22,6 @@
   margin: 0;
   padding: 0;
   overflow: hidden;
-}
-
-.item {
-  display: grid;
-  grid-template-columns: auto 1fr auto;
-  padding: var(--pd-10) var(--pd-8);
-  align-items: center;
-  grid-gap: var(--pd-12);
-  font-size: var(--text-12);
-  line-height: var(--line-16);
-}
-
-.num {
-  width: 16px;
-}
-
-.title {
-  flex-grow: 1;
-  color: var(--tw-primary-content);
-  font-weight: var(--font-400);
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-
-.amount {
-  font-weight: var(--font-400);
-  text-align: right;
 }
 
 .chart {
