[CAP-299] Fixed 'Spending by' widget

--- a/src/app/components/SpendingByWidget/components/NumberedItem.css
+++ b/src/app/components/SpendingByWidget/components/NumberedItem.css
@@ -19,7 +19,15 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+}
+
+.clickable {
+  transition: color 0.3s;
   cursor: pointer;
+
+  &:hover {
+    color: var(--tw-primary-bg);
+  }
 }
 
 .amount {
