--- a/src/app/components/SpendingByWidget/SpendingByWidget.css
+++ b/src/app/components/SpendingByWidget/SpendingByWidget.css
@@ -1,7 +1,9 @@
 .content {
   display: grid;
-  grid-gap: var(--pd-40);
+  grid-gap: var(--pd-16) var(--pd-40);
+}
 
+.with-chart {
   @media (--bp-medium) {
     grid-template-columns: 1fr auto;
   }
