transaction details panel

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,10 @@
   --tw-green-80: #047857;
   --tw-green-70: #059669;
   --tw-green-60: #10b981;
+  --tw-green-30: #44b96d;
+  --tw-green-25: #b4f7b9;
   --tw-green-20: #d1fae5;
+  --tw-green-15: #e7f8e8;
   --tw-green-10: #ecfdf5;
   --tw-red-80: #b91c1c;
   --tw-red-70: #dc2626;
