--- a/src/transactions/components/TransactionPreview/TransactionPreview.css
+++ b/src/transactions/components/TransactionPreview/TransactionPreview.css
@@ -1,16 +1,27 @@
 .status {
   display: flex;
   margin: 0 -24px;
-  padding: 10px 10px 10px 48px;
+  padding: var(--pd-10) var(--pd-10) var(--pd-10) var(--pd-48);
   align-items: center;
   color: var(--tw-white);
   font-weight: 600;
   text-transform: capitalize;
+}
+
+.status.grey {
+  background-color: var(--tw-gray-60);
+}
+
+.status.green {
   background-color: var(--tw-green-70);
 }
 
+.status.red {
+  background-color: var(--tw-red-70);
+}
+
 .status-msg {
-  margin-left: 5px;
+  margin-left: var(--pd-5);
   font-weight: 400;
 }
 
@@ -23,8 +34,8 @@
 
 .summary {
   display: flex;
-  margin-bottom: 24px;
-  padding-bottom: 24px;
+  margin-bottom: var(--pd-24);
+  padding-bottom: var(--pd-24);
   align-items: center;
   flex-direction: column;
   justify-content: center;
@@ -35,7 +46,7 @@
   color: #000;
   font-size: var(--text-20);
   font-weight: bold;
-  line-height: 28px;
+  line-height: var(--line-28);
 }
 
 .merchant-logo {
@@ -45,18 +56,18 @@
 
 .merchant {
   font-size: var(--text-14);
-  line-height: 20px;
+  line-height: var(--line-20);
 }
 
 .merchant > span {
-  padding: 4px;
+  padding: var(--pd-4);
 }
 
 .date {
   padding: var(--pd-2);
   color: var(--tw-gray-60);
   font-size: var(--text-12);
-  line-height: 16px;
+  line-height: var(--line-16);
 }
 
 .date > span {
@@ -65,15 +76,15 @@
 
 .receipt-cta {
   width: 100%;
-  margin-top: 24px;
+  margin-top: var(--pd-24);
 }
 
 .receipt-cta svg {
-  margin-top: 8px;
+  margin-top: var(--pd-8);
 }
 
 .report-issue-cta {
-  margin-top: 24px;
+  margin-top: var(--pd-24);
 }
 
 .report-issue-cta svg {
@@ -82,7 +93,7 @@
 }
 
 .title {
-  margin: 24px 0 var(--pd-2) 0;
+  margin: var(--pd-24) 0 var(--pd-2) 0;
   font: inherit;
   font-size: var(--text-12);
   line-height: var(--line-16);
@@ -92,7 +103,7 @@
 
 .card {
   display: flex;
-  margin: 10px 0;
+  margin: var(--pd-10) 0;
   padding: 12px 16px;
   align-items: center;
   border: 1px solid var(--tw-gray-30);
@@ -108,12 +119,12 @@
   display: flex;
   width: 32px;
   height: 32px;
-  margin-right: 14px;
+  margin-right: var(--pd-14);
   align-items: center;
   justify-content: center;
   background: var(--tw-green-15);
   border: 1px solid var(--tw-green-25);
-  border-radius: 12px;
+  border-radius: var(--radius-12);
 }
 
 .card-icon > svg {
@@ -152,4 +163,13 @@
 
 .detail-rows > div span {
   padding: var(--pd-2);
+}
+
+.missing-logo-url {
+  width: 46px;
+  height: 46px;
+  margin: 15px;
+  background-color: var(--tw-gray-20);
+  border: 1px solid var(--tw-gray-30);
+  border-radius: var(--radius-8);
 }
