--- a/src/transactions/components/TransactionPreview/ReceiptsView.css
+++ b/src/transactions/components/TransactionPreview/ReceiptsView.css
@@ -22,6 +22,8 @@
 
 .bottom {
   display: flex;
+  width: 320px;
+  max-width: 100vw;
   padding-top: var(--pd-14);
   align-items: center;
   justify-content: space-between;
@@ -29,4 +31,8 @@
 
 .delete {
   color: var(--tw-red-70);
+}
+
+.receipt-image-wrapper {
+  text-align: center;
 }
