[CAP-338] Added link to go back to login page

--- a/src/app/pages/ForgotPassword/ForgotPassword.css
+++ b/src/app/pages/ForgotPassword/ForgotPassword.css
@@ -8,6 +8,14 @@
   }
 }
 
+.secondary {
+  display: block;
+  margin-top: var(--pd-8);
+  margin-bottom: -8px;
+  padding: var(--pd-8);
+  text-align: center;
+}
+
 .header {
   padding-bottom: var(--pd-24);
 
