--- a/src/transactions/components/TransactionsTable/TransactionsTable.css
+++ b/src/transactions/components/TransactionsTable/TransactionsTable.css
@@ -28,8 +28,7 @@
 .icon {
   width: 24px;
   height: 24px;
-  margin-top: -4px;
-  background: var(--tw-gray-30);
+  object-fit: contain;
   border-radius: var(--radius-8);
 }
 
