Improved mobile input formatting, removed typo

--- a/src/_common/components/Input/Input.css
+++ b/src/_common/components/Input/Input.css
@@ -57,6 +57,7 @@
   padding-left: var(--pd-12);
   align-items: center;
   flex-shrink: 0;
+  line-height: 1;
 
   & > svg {
     color: var(--tw-gray-60);
