[CAP-547] Updated password reset form, improved small screen behavior

--- a/src/app/pages/ResetPassword/ResetPassword.css
+++ b/src/app/pages/ResetPassword/ResetPassword.css
@@ -1,7 +1,6 @@
 .secondary {
   display: block;
-  margin-top: var(--pd-8);
-  margin-bottom: -8px;
-  padding: var(--pd-8);
-  text-align: center;
+  margin-top: var(--pd-12);
+  color: var(--tw-light);
+  font-weight: bold;
 }
